# master/src/main/java/com/obsdl/master/dto/obs/ObsDirectoryItemResponse.java
@@ -1,0 +1,4 @@
+package com.obsdl.master.dto.obs;
+
+public record ObsDirectoryItemResponse(String name, String prefix) {
+}
